--- a/css/hap-player.css
+++ b/css/hap-player.css
@@ -6,7 +6,7 @@
 		text-decoration: none;
 		line-height:52px;
 		font-size: 32px;
-		margin-left: -38px;
+		margin-left: -42px;
 		/* define your pause/play buton color here */
 		color: #ffffff;
 	}
@@ -18,7 +18,7 @@
 		text-align:center;
 		cursor: pointer;
 		font: 16px 'SourceSansProSemibold', Arial, sans-serif;
-		color: #444;
+		color: #fff;
 		line-height: 48px;
 		top: 222px;
 	}
@@ -41,7 +41,7 @@
 		left: 48px;
 		width: 432px;
 		height: 100%;
-		background-color: #eee;
+		background-color: #444;
 	}
 
 	.jp-seek-bar {
@@ -57,7 +57,7 @@
 		position:absolute;
 		top: 0;
 		height:100%;
-		background-color: #ff0;
+		background-color: #999;
 	}
 
 	.jp-duration {
