--- a/css/hap.css
+++ b/css/hap.css
@@ -1,6 +1,6 @@
 body {
 	/*overflow: hidden;*/
-	font: 18px/28px "Droid Serif", Georgia, Times, serif;
+	font: 18px/28px "CrimsonRoman", Georgia, Times, serif;
 	background: #fcfcfc;
 	color: #444;
 }
