save the script

--- a/css/hap.css
+++ b/css/hap.css
@@ -186,3 +186,12 @@ span.state {
 	top: 8px
 	right: 8px;
 }
+
+/*input {
+	background-color: #fff;
+	color: #444;
+	border-style: solid; 
+	border-color: #fff;
+	border: 0px 4px 0px 4px;
+	padding: 1px 6px 1px 6px;
+}*/
