--- a/css/hap.css
+++ b/css/hap.css
@@ -185,6 +185,13 @@ div.drag-bar:hover {
 	left: 0px;
 	top: 78px;
 }
+#target-canvas.fullscreen {
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
 
 span.state {
 	position:absolute;
