Added gui to RHS. The skin needs a refactor.

--- a/css/hap.css
+++ b/css/hap.css
@@ -183,7 +183,8 @@ div.drag-bar:hover {
 #target-canvas {
 	position: absolute;
 	left: 0px;
-	top: 78px;
+	/* top: 78px; */
+	top: 0;
 }
 #target-canvas.fullscreen {
 	position:fixed;
